category module improved and integrated into the UI